--- a/swapper-int.ipynb
+++ b/swapper-int.ipynb
@@ -7,7 +7,7 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/harisreedhar/Swap-Mukham/blob/main/swap_mukham_colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/morth3n/swapper-int/blob/main/swapper-int.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -16,10 +16,10 @@
         "id": "bypvIQG5RHl9"
       },
       "source": [
-        "# 🗿 **Swap-Mukham**\n",
+        "# 🗿 **swapper-int**\n",
         "*Face swap app based on insightface inswapper.*\n",
-        "- [Github](https://github.com/harisreedhar/Swap-Mukham)\n",
-        "- [Disclaimer](https://github.com/harisreedhar/Swap-Mukham#disclaimer)"
+        "- [Github](https://github.com/harisreedhar/swapper-int)\n",
+        "- [Disclaimer](https://github.com/harisreedhar/swapper-int#disclaimer)"
       ]
     },
     {
@@ -40,7 +40,7 @@
       "outputs": [],
       "source": [
         "#@title\n",
-        "! git clone https://github.com/harisreedhar/Swap-Mukham"
+        "! git clone https://github.com/morth3n/swapper-int"
       ]
     },
     {
@@ -61,7 +61,7 @@
       "outputs": [],
       "source": [
         "#@title\n",
-        "%cd Swap-Mukham/\n",
+        "%cd swapper-int/\n",
         "print(\"Installing requirements...\")\n",
         "!pip install -r requirements.txt -q\n",
         "!pip install gdown\n",
@@ -97,21 +97,21 @@
         "import gdown\n",
         "import urllib.request\n",
         "print(\"Downloading swapper model...\")\n",
-        "urllib.request.urlretrieve(inswapper_model, \"/content/Swap-Mukham/assets/pretrained_models/inswapper_128.onnx\")\n",
+        "urllib.request.urlretrieve(inswapper_model, \"/content/swapper-int/assets/pretrained_models/inswapper_128.onnx\")\n",
         "print(\"Downloading gfpgan model...\")\n",
-        "urllib.request.urlretrieve(gfpgan_model, \"/content/Swap-Mukham/assets/pretrained_models/GFPGANv1.4.pth\")\n",
+        "urllib.request.urlretrieve(gfpgan_model, \"/content/swapper-int/assets/pretrained_models/GFPGANv1.4.pth\")\n",
         "print(\"Downloading face parsing model...\")\n",
-        "gdown.download(face_parser_model, \"/content/Swap-Mukham/assets/pretrained_models/79999_iter.pth\")\n",
+        "gdown.download(face_parser_model, \"/content/swapper-int/assets/pretrained_models/79999_iter.pth\")\n",
         "print(\"Downloading realesrgan 2x model...\")\n",
-        "urllib.request.urlretrieve(real_esrgan_2x_model, \"/content/Swap-Mukham/assets/pretrained_models/RealESRGAN_x2.pth\")\n",
+        "urllib.request.urlretrieve(real_esrgan_2x_model, \"/content/swapper-int/assets/pretrained_models/RealESRGAN_x2.pth\")\n",
         "print(\"Downloading realesrgan 4x model...\")\n",
-        "urllib.request.urlretrieve(real_esrgan_4x_model, \"/content/Swap-Mukham/assets/pretrained_models/RealESRGAN_x4.pth\")\n",
+        "urllib.request.urlretrieve(real_esrgan_4x_model, \"/content/swapper-int/assets/pretrained_models/RealESRGAN_x4.pth\")\n",
         "print(\"Downloading realesrgan 8x model...\")\n",
-        "urllib.request.urlretrieve(real_esrgan_8x_model, \"/content/Swap-Mukham/assets/pretrained_models/RealESRGAN_x8.pth\")\n",
+        "urllib.request.urlretrieve(real_esrgan_8x_model, \"/content/swapper-int/assets/pretrained_models/RealESRGAN_x8.pth\")\n",
         "print(\"Downloading codeformer...\")\n",
-        "urllib.request.urlretrieve(codeformer_model, \"/content/Swap-Mukham/assets/pretrained_models/codeformer.onnx\")\n",
+        "urllib.request.urlretrieve(codeformer_model, \"/content/swapper-int/assets/pretrained_models/codeformer.onnx\")\n",
         "print(\"Downloading NSFW detector model...\")\n",
-        "urllib.request.urlretrieve(nsfw_det_model, \"/content/Swap-Mukham/assets/pretrained_models/open-nsfw.onnx\")\n",
+        "urllib.request.urlretrieve(nsfw_det_model, \"/content/swapper-int/assets/pretrained_models/open-nsfw.onnx\")\n",
         "print(\"Downloading models done.\")"
       ]
     },
@@ -156,7 +156,7 @@
       "outputs": [],
       "source": [
         "#@title\n",
-        "default_output_path = \"/content/Swap-Mukham\" #@param {type:\"string\"}\n",
+        "default_output_path = \"/content/swapper-int\" #@param {type:\"string\"}\n",
         "\n",
         "command = f\"python app.py --cuda --colab --out_dir {default_output_path}\"\n",
         "!{command}"
